# test_jules

./: .gitignore  README.md  README.zh-CN.md  README.zh-TW.md  decision_tree_examples.md  gemini.md  test_api.sh  test_decision_api.sh
app/: pubspec.yaml
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: decision_service.dart  main.dart  settings_page.dart
app/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig
backend/: Dockerfile  INSTRUCTIONS_FIREBASE.zh-CN.md  README.md  docker-compose.yaml  firebase_setup.py  main.py  pyproject.toml  requirements.txt  seed_firestore.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: decision.py  legacy.py
backend/app/api/v1/endpoints/analysis/: personality.py
backend/app/api/v1/endpoints/processing/: text.py
backend/app/core/: firebase_setup.py
backend/app/models/: api.py  decision.py  legacy.py
backend/app/services/: tree_engine.py
backend/scripts/: seed_firestore.py  seed_personalities.py
backend/tests/: test_analysis_endpoints.py  test_legacy_endpoints.py  test_processing_endpoints.py  test_tree_engine.py
core_processing_service/: .gitignore  Dockerfile  INSTRUCTIONS_FIREBASE.md  firebase_setup.py  main.py  seed_firestore.py  tree_engine.py
docs/: firestore_datamodel.md
example/: example_decision_trees.py
frontend/: pubspec.yaml
frontend/lib/: decision_service.dart  main.dart  mbti_questionnaire_page.dart  mbti_result_page.dart  personality_analysis_page.dart  settings_page.dart  settings_service.dart
(+1 files in other folders)
