[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "firebase-admin>=7.1.0",
    "jieba>=0.42.1",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "transformers>=4.55.2",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.5",
    "pytest>=8.3.2",
]

[tool.ruff]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.setuptools]
packages = ["app"]
